[package]
name = "madfs-reliability"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
madsim = { git = "https://github.com/madsys-dev/madsim", rev = "42e81fa", features=["sim"]}
futures = "0.3"
log = "0.4"
env_logger = "0.9"
thiserror = "1.0"
serde = {version = "1.0", features = ["derive"] }
rand = { version = "0.8", features = ["std_rng"] }
ahash = "0.5"
bincode = "1.3"
lazy_static = "1.4"